修改Configuration中条件判断的实现